src/main/CronusGrammarParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CronusGrammarParser.java */
package main;

public class CronusGrammarParser/*@bgen(jjtree)*/implements CronusGrammarParserTreeConstants, CronusGrammarParserConstants {/*@bgen(jjtree)*/
  protected static JJTCronusGrammarParserState jjtree = new JJTCronusGrammarParserState();/**
	* Returns the root node of the AST.
	* It only makes sense to call this after a successful parse.
	* @return the root node
	*/
        public Node rootNode() {
        return jjtree.rootNode();
        }

/*
	== START FUNCTION ==
*/
  static final public SimpleNode Start() throws ParseException {
 /*@bgen(jjtree) Start */
        ASTStart jjtn000 = new ASTStart(JJTSTART);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));Token v, eq, d, opar, comma, cpar, scol, n, osqbr, csqbr, i;
    try {
      label_1:
      while (true) {
        if (jj_2_1(3)) {
          Declaration();
        } else if (jj_2_2(3)) {
          NewGraph();
        } else if (jj_2_3(2147483647)) {
          ListNodes();
        } else if (jj_2_4(2147483647)) {
          SearchGraph();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NODE:
          case VARIABLE:
            GetNode();
            break;
          default:
            jj_la1[0] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case GRAPH:
        case NODE:
        case EDGE:
        case VARIABLE:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
      }
      jj_consume_token(0);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.jjtSetLastToken(getToken(0));
         {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
    throw new Error("Missing return statement in function");
  }

/*
	== DECLARATION OF VARIABLES ==
*/
  static final public void Declaration() throws ParseException {
 /*@bgen(jjtree) Declaration */
        ASTDeclaration jjtn000 = new ASTDeclaration(JJTDECLARATION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));Token g, e, n, v, scol;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GRAPH:
        g = jj_consume_token(GRAPH);
                                ASTGraph jjtn001 = new ASTGraph(JJTGRAPH);
                                boolean jjtc001 = true;
                                jjtree.openNodeScope(jjtn001);
                                jjtn001.jjtSetFirstToken(getToken(1));
        try {
                                jjtree.closeNodeScope(jjtn001, true);
                                jjtc001 = false;
                                jjtn001.jjtSetLastToken(getToken(0));
                               jjtn001.val = g.image;
        } finally {
                                if (jjtc001) {
                                  jjtree.closeNodeScope(jjtn001, true);
                                  jjtn001.jjtSetLastToken(getToken(0));
                                }
        }
        break;
      case EDGE:
        e = jj_consume_token(EDGE);
                               ASTEdge jjtn002 = new ASTEdge(JJTEDGE);
                               boolean jjtc002 = true;
                               jjtree.openNodeScope(jjtn002);
                               jjtn002.jjtSetFirstToken(getToken(1));
        try {
                               jjtree.closeNodeScope(jjtn002, true);
                               jjtc002 = false;
                               jjtn002.jjtSetLastToken(getToken(0));
                              jjtn002.val = e.image;
        } finally {
                               if (jjtc002) {
                                 jjtree.closeNodeScope(jjtn002, true);
                                 jjtn002.jjtSetLastToken(getToken(0));
                               }
        }
        break;
      default:
        jj_la1[2] = jj_gen;
        if (jj_2_5(2)) {
          n = jj_consume_token(NODE);
                               ASTNode jjtn003 = new ASTNode(JJTNODE);
                               boolean jjtc003 = true;
                               jjtree.openNodeScope(jjtn003);
                               jjtn003.jjtSetFirstToken(getToken(1));
          try {
                               jjtree.closeNodeScope(jjtn003, true);
                               jjtc003 = false;
                               jjtn003.jjtSetLastToken(getToken(0));
                              jjtn003.val = n.image;
          } finally {
                               if (jjtc003) {
                                 jjtree.closeNodeScope(jjtn003, true);
                                 jjtn003.jjtSetLastToken(getToken(0));
                               }
          }
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      v = jj_consume_token(VARIABLE);
                              ASTVariable jjtn004 = new ASTVariable(JJTVARIABLE);
                              boolean jjtc004 = true;
                              jjtree.openNodeScope(jjtn004);
                              jjtn004.jjtSetFirstToken(getToken(1));
      try {
                              jjtree.closeNodeScope(jjtn004, true);
                              jjtc004 = false;
                              jjtn004.jjtSetLastToken(getToken(0));
                             jjtn004.val = v.image;
      } finally {
                              if (jjtc004) {
                                jjtree.closeNodeScope(jjtn004, true);
                                jjtn004.jjtSetLastToken(getToken(0));
                              }
      }
      scol = jj_consume_token(SCOL);
                          ASTSemicolon jjtn005 = new ASTSemicolon(JJTSEMICOLON);
                          boolean jjtc005 = true;
                          jjtree.openNodeScope(jjtn005);
                          jjtn005.jjtSetFirstToken(getToken(1));
      try {
                          jjtree.closeNodeScope(jjtn005, true);
                          jjtc005 = false;
                          jjtn005.jjtSetLastToken(getToken(0));
                         jjtn005.val = scol.image;
      } finally {
                          if (jjtc005) {
                            jjtree.closeNodeScope(jjtn005, true);
                            jjtn005.jjtSetLastToken(getToken(0));
                          }
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
  }

/*
	== NEW GRAPH ==
*/
  static final public void NewGraph() throws ParseException {
 /*@bgen(jjtree) NewGraph */
        ASTNewGraph jjtn000 = new ASTNewGraph(JJTNEWGRAPH);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));Token g, e, n, osqbr, csqbr, v, eq, scol;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GRAPH:
        g = jj_consume_token(GRAPH);
                                        ASTGraph jjtn001 = new ASTGraph(JJTGRAPH);
                                        boolean jjtc001 = true;
                                        jjtree.openNodeScope(jjtn001);
                                        jjtn001.jjtSetFirstToken(getToken(1));
        try {
                                        jjtree.closeNodeScope(jjtn001, true);
                                        jjtc001 = false;
                                        jjtn001.jjtSetLastToken(getToken(0));
                                       jjtn001.val = g.image;
        } finally {
                                        if (jjtc001) {
                                          jjtree.closeNodeScope(jjtn001, true);
                                          jjtn001.jjtSetLastToken(getToken(0));
                                        }
        }
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      v = jj_consume_token(VARIABLE);
                                   ASTVariable jjtn002 = new ASTVariable(JJTVARIABLE);
                                   boolean jjtc002 = true;
                                   jjtree.openNodeScope(jjtn002);
                                   jjtn002.jjtSetFirstToken(getToken(1));
      try {
                                   jjtree.closeNodeScope(jjtn002, true);
                                   jjtc002 = false;
                                   jjtn002.jjtSetLastToken(getToken(0));
                                  jjtn002.val = v.image;
      } finally {
                                   if (jjtc002) {
                                     jjtree.closeNodeScope(jjtn002, true);
                                     jjtn002.jjtSetLastToken(getToken(0));
                                   }
      }
      eq = jj_consume_token(EQ);
                        ASTEqual jjtn003 = new ASTEqual(JJTEQUAL);
                        boolean jjtc003 = true;
                        jjtree.openNodeScope(jjtn003);
                        jjtn003.jjtSetFirstToken(getToken(1));
      try {
                        jjtree.closeNodeScope(jjtn003, true);
                        jjtc003 = false;
                        jjtn003.jjtSetLastToken(getToken(0));
                       jjtn003.val = eq.image;
      } finally {
                        if (jjtc003) {
                          jjtree.closeNodeScope(jjtn003, true);
                          jjtn003.jjtSetLastToken(getToken(0));
                        }
      }
      NewGraphRight();
      scol = jj_consume_token(SCOL);
                          ASTSemicolon jjtn004 = new ASTSemicolon(JJTSEMICOLON);
                          boolean jjtc004 = true;
                          jjtree.openNodeScope(jjtn004);
                          jjtn004.jjtSetFirstToken(getToken(1));
      try {
                          jjtree.closeNodeScope(jjtn004, true);
                          jjtc004 = false;
                          jjtn004.jjtSetLastToken(getToken(0));
                         jjtn004.val = scol.image;
      } finally {
                          if (jjtc004) {
                            jjtree.closeNodeScope(jjtn004, true);
                            jjtn004.jjtSetLastToken(getToken(0));
                          }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
  }

/*
	== RIGHT HAND SIDE OF A NEW GRAPH ==
*/
  static final public void NewGraphRight() throws ParseException {
 /*@bgen(jjtree) NewGraphRight */
        ASTNewGraphRight jjtn000 = new ASTNewGraphRight(JJTNEWGRAPHRIGHT);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));Token n, g, p, opar, cpar;
    try {
      n = jj_consume_token(NEW);
                         ASTNew jjtn001 = new ASTNew(JJTNEW);
                         boolean jjtc001 = true;
                         jjtree.openNodeScope(jjtn001);
                         jjtn001.jjtSetFirstToken(getToken(1));
      try {
                         jjtree.closeNodeScope(jjtn001, true);
                         jjtc001 = false;
                         jjtn001.jjtSetLastToken(getToken(0));
                        jjtn001.val = n.image;
      } finally {
                         if (jjtc001) {
                           jjtree.closeNodeScope(jjtn001, true);
                           jjtn001.jjtSetLastToken(getToken(0));
                         }
      }
      g = jj_consume_token(GRAPH);
                           ASTGraph jjtn002 = new ASTGraph(JJTGRAPH);
                           boolean jjtc002 = true;
                           jjtree.openNodeScope(jjtn002);
                           jjtn002.jjtSetFirstToken(getToken(1));
      try {
                           jjtree.closeNodeScope(jjtn002, true);
                           jjtc002 = false;
                           jjtn002.jjtSetLastToken(getToken(0));
                          jjtn002.val = g.image;
      } finally {
                           if (jjtc002) {
                             jjtree.closeNodeScope(jjtn002, true);
                             jjtn002.jjtSetLastToken(getToken(0));
                           }
      }
      opar = jj_consume_token(OPAR);
                          ASTOpenParenthesis jjtn003 = new ASTOpenParenthesis(JJTOPENPARENTHESIS);
                          boolean jjtc003 = true;
                          jjtree.openNodeScope(jjtn003);
                          jjtn003.jjtSetFirstToken(getToken(1));
      try {
                          jjtree.closeNodeScope(jjtn003, true);
                          jjtc003 = false;
                          jjtn003.jjtSetLastToken(getToken(0));
                         jjtn003.val = opar.image;
      } finally {
                          if (jjtc003) {
                            jjtree.closeNodeScope(jjtn003, true);
                            jjtn003.jjtSetLastToken(getToken(0));
                          }
      }
      p = jj_consume_token(PATH);
                          ASTPath jjtn004 = new ASTPath(JJTPATH);
                          boolean jjtc004 = true;
                          jjtree.openNodeScope(jjtn004);
                          jjtn004.jjtSetFirstToken(getToken(1));
      try {
                          jjtree.closeNodeScope(jjtn004, true);
                          jjtc004 = false;
                          jjtn004.jjtSetLastToken(getToken(0));
                         jjtn004.val = p.image;
      } finally {
                          if (jjtc004) {
                            jjtree.closeNodeScope(jjtn004, true);
                            jjtn004.jjtSetLastToken(getToken(0));
                          }
      }
      cpar = jj_consume_token(CPAR);
                          ASTCloseParenthesis jjtn005 = new ASTCloseParenthesis(JJTCLOSEPARENTHESIS);
                          boolean jjtc005 = true;
                          jjtree.openNodeScope(jjtn005);
                          jjtn005.jjtSetFirstToken(getToken(1));
      try {
                          jjtree.closeNodeScope(jjtn005, true);
                          jjtc005 = false;
                          jjtn005.jjtSetLastToken(getToken(0));
                         jjtn005.val = cpar.image;
      } finally {
                          if (jjtc005) {
                            jjtree.closeNodeScope(jjtn005, true);
                            jjtn005.jjtSetLastToken(getToken(0));
                          }
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
  }

/*
	== LIST ALL NODES ACCORDING TWO PARAMETERS (IF ANY) ==
*/
  static final public void ListNodes() throws ParseException {
 /*@bgen(jjtree) ListNodes */
        ASTListNodes jjtn000 = new ASTListNodes(JJTLISTNODES);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));Token eq, scol, v, d, n, o, c;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NODE:
        NodeListDec();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EQ:
          eq = jj_consume_token(EQ);
                      ASTEqual jjtn001 = new ASTEqual(JJTEQUAL);
                      boolean jjtc001 = true;
                      jjtree.openNodeScope(jjtn001);
                      jjtn001.jjtSetFirstToken(getToken(1));
          try {
                      jjtree.closeNodeScope(jjtn001, true);
                      jjtc001 = false;
                      jjtn001.jjtSetLastToken(getToken(0));
                     jjtn001.val = eq.image;
          } finally {
                      if (jjtc001) {
                        jjtree.closeNodeScope(jjtn001, true);
                        jjtn001.jjtSetLastToken(getToken(0));
                      }
          }
          ListNodesRight();
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        scol = jj_consume_token(SCOL);
                          ASTSemicolon jjtn002 = new ASTSemicolon(JJTSEMICOLON);
                          boolean jjtc002 = true;
                          jjtree.openNodeScope(jjtn002);
                          jjtn002.jjtSetFirstToken(getToken(1));
        try {
                          jjtree.closeNodeScope(jjtn002, true);
                          jjtc002 = false;
                          jjtn002.jjtSetLastToken(getToken(0));
                         jjtn002.val = scol.image;
        } finally {
                          if (jjtc002) {
                            jjtree.closeNodeScope(jjtn002, true);
                            jjtn002.jjtSetLastToken(getToken(0));
                          }
        }
        break;
      case VARIABLE:
        v = jj_consume_token(VARIABLE);
                              ASTVariable jjtn003 = new ASTVariable(JJTVARIABLE);
                              boolean jjtc003 = true;
                              jjtree.openNodeScope(jjtn003);
                              jjtn003.jjtSetFirstToken(getToken(1));
        try {
                              jjtree.closeNodeScope(jjtn003, true);
                              jjtc003 = false;
                              jjtn003.jjtSetLastToken(getToken(0));
                             jjtn003.val = v.image;
        } finally {
                              if (jjtc003) {
                                jjtree.closeNodeScope(jjtn003, true);
                                jjtn003.jjtSetLastToken(getToken(0));
                              }
        }
        eq = jj_consume_token(EQ);
                        ASTEqual jjtn004 = new ASTEqual(JJTEQUAL);
                        boolean jjtc004 = true;
                        jjtree.openNodeScope(jjtn004);
                        jjtn004.jjtSetFirstToken(getToken(1));
        try {
                        jjtree.closeNodeScope(jjtn004, true);
                        jjtc004 = false;
                        jjtn004.jjtSetLastToken(getToken(0));
                       jjtn004.val = eq.image;
        } finally {
                        if (jjtc004) {
                          jjtree.closeNodeScope(jjtn004, true);
                          jjtn004.jjtSetLastToken(getToken(0));
                        }
        }
        ListNodesRight();
        scol = jj_consume_token(SCOL);
                          ASTSemicolon jjtn005 = new ASTSemicolon(JJTSEMICOLON);
                          boolean jjtc005 = true;
                          jjtree.openNodeScope(jjtn005);
                          jjtn005.jjtSetFirstToken(getToken(1));
        try {
                          jjtree.closeNodeScope(jjtn005, true);
                          jjtc005 = false;
                          jjtn005.jjtSetLastToken(getToken(0));
                         jjtn005.val = scol.image;
        } finally {
                          if (jjtc005) {
                            jjtree.closeNodeScope(jjtn005, true);
                            jjtn005.jjtSetLastToken(getToken(0));
                          }
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            jjtn000.jjtSetLastToken(getToken(0));
          }
    }
  }

/*
	== NODE LIST DECLARATION ==
*/
  static final public void NodeListDec() throws ParseException {
 /*@bgen(jjtree) NodeListDec */
        ASTNodeListDec jjtn000 = new ASTNodeListDec(JJTNODELISTDEC);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        jjtn000.jjtSetFirstToken(getToken(1));Token n, obr, cbr, v;
    try {
      n = jj_consume_token(NODE);
                         ASTNode jjtn001 = new ASTNode(JJTNODE);
                         boolean jjtc001 = true;
                         jjtree.openNodeScope(jjtn001);
                         jjtn001.jjtSetFirstToken(getToken(1));
      try {
                         jjtree.closeNodeScope(jjtn001, true);
                         jjtc001 = false;
                         jjtn001.jjtSetLastToken(getToken(0));
                        jjtn001.val = n.image;
      } finally {
                         if (jjtc001) {
                           jjtree.closeNodeScope(jjtn001, true);
                           jjtn001.jjtSetLastToken(getToken(0));
                         }
      }
      obr = jj_consume_token(OSQBR);
                          ASTOpenSquareBracket jjtn002 = new ASTOpenSquareBracket(JJTOPENSQUAREBRACKET);
